--- a/index.html
+++ b/index.html
@@ -1,79 +1,24 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-	<!-- Google tag (gtag.js) -->
-	<script async src="https://www.googletagmanager.com/gtag/js?id=G-G7L29BED5Q"></script>
-	<script>
-		window.dataLayer = window.dataLayer || [];
-		function gtag(){dataLayer.push(arguments);}
-		gtag('js', new Date());
-		
-		gtag('config', 'G-G7L29BED5Q');
-	</script>
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
-	<link rel="shortcut icon" href="./src/favicon.ico" type="image/x-icon">
-	<link rel="stylesheet" href="style.css">
-	<title>@phiMeansSth</title>
+	<title>Document</title>
 </head>
 <body>
-	<table>
-		<thead></thead>
-		<tbody>
-			<tr>
-				<td class="game">디스코드</td>
-				<td class="id">
-					<a 
-						target="_blank" 
-						rel="noreferrer" 
-						href="https://discord.com/users/365061260040994817">
-						b1nk.
-					</a>
-				</td>
-			</tr>
-			<tr>
-				<td class="game">왓챠피디아</td>
-				<td class="id">
-					<a 
-						target="_blank" 
-						rel="noreferrer" 
-						href="https://pedia.watcha.com/ko-KR/users/87Gv7ZdZymqE6">
-						ㅇㅅㅇ
-					</a>
-				</td>
-			</tr>
-			<tr>
-				<td class="game">애플뮤직</td>
-				<td class="id">
-					<a 
-						target="_blank" 
-						rel="noreferrer" 
-						href="https://music.apple.com/profile/NMeansNothing">
-						N
-					</a>
-				</td>
-			</tr>
-			<tr>
-				<td class="game">블루 아카이브 (한섭)</td>
-				<td class="id">BFWCYUTR</td>
-			</tr>
-			<tr>
-				<td class="game">블루 아카이브 (일섭)</td>
-				<td class="id">BTYXEXUC</td>
-			</tr>
-			<tr>
-				<td class="game">프로세카 (일섭)</td>
-				<td class="id">220058880604577800</td>
-			</tr>
-			<tr>
-				<td class="game">뱅드림 (일섭)</td>
-				<td class="id">129621035</td>
-			</tr>
-			<tr>
-				<td class="game">Arcaea</td>
-				<td class="id">753455725</td>
-			</tr>
-		</tbody>
-	</table>
+	<h1>파이</h1>
+	<h2>@phiMeansSth</h2>
+	<h3>자주언급</h3>
+	<span>마작, 백합, 블루아카이브, 리듬게임</span>
+	<h3>가끔언급</h3>
+	<span>KBO, F1 (시즌중에만), 국힙</span>
+	<h3>지뢰라고까지하기엔애매한데암튼보이면그냥스루하는것들</h3>
+	<span>BL, 농구, 연애 프로그램</span>
+	<h3>링크</h3>
+	<span>
+		<a href="https://discord.com/users/365061260040994817">디스코드</a><br />
+		<a href="https://pedia.watcha.com/ko-KR/users/87Gv7ZdZymqE6">왓챠피디아</a><br />
+		<a href="https://music.apple.com/profile/NMeansNothing">애플뮤직</a><br />
+	</span>
 </body>
 </html>
