--- a/index.html
+++ b/index.html
@@ -3,22 +3,25 @@
 <head>
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
-	<title>Document</title>
+	<title>@phiMeansSth</title>
+	<link rel="stylesheet" href="style.css">
 </head>
 <body>
-	<h1>파이</h1>
-	<h2>@phiMeansSth</h2>
-	<h3>자주언급</h3>
-	<span>마작, 백합, 블루아카이브, 리듬게임</span>
-	<h3>가끔언급</h3>
-	<span>KBO, F1 (시즌중에만), 국힙</span>
-	<h3>지뢰라고까지하기엔애매한데암튼보이면그냥스루하는것들</h3>
-	<span>BL, 농구, 연애 프로그램</span>
-	<h3>링크</h3>
-	<span>
-		<a href="https://discord.com/users/365061260040994817">디스코드</a><br />
-		<a href="https://pedia.watcha.com/ko-KR/users/87Gv7ZdZymqE6">왓챠피디아</a><br />
-		<a href="https://music.apple.com/profile/NMeansNothing">애플뮤직</a><br />
-	</span>
+	<div id="wrapper">
+		<div id="inner">
+			<div class="info">
+				<h1>파이</h1>
+				<h2>@phiMeansSth</h2>
+
+				<h3>♡</h3>
+				<span>마작, 백합, 블루아카이브, 리듬게임</span>
+				<h3>O</h3>
+				<span>KBO, F1 (시즌중에만), 국힙</span>
+				<h3>X</h3>
+				<span>BL, 농구, 연애 프로그램</span>
+			</div>
+			<div class="link"></div>
+		</div>
+	</div>
 </body>
 </html>
