--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
                             <p id="text01" style="opacity: 1; transform: none;">@phiMeansSth</p>
                             <hr id="divider01">
                             <h1 id="text05" style="opacity: 1; transform: none;">♡</h1>
-                            <p id="text06" style="opacity: 1; transform: none;">마작, 백합, 블루 아카이브, 리듬게임</p>
+                            <p id="text06" style="opacity: 1; transform: none;">마작, 스플래툰, 블루 아카이브, 리듬게임, 백합</p>
                             <h1 id="text07" style="opacity: 1; transform: none;">O</h1>
                             <p id="text08" style="opacity: 1; transform: none;">KBO, F1 (시즌 중에만), 한국 힙합</p>
                             <h1 id="text03" style="opacity: 1; transform: none;">X</h1>
